--- a/index.html
+++ b/index.html
@@ -1,36 +1,238 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<!DOCTYPE html><html lang="pt-br" data-theme="dark"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROXY MOOZ</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="Mooz Store - Melhor loja do discord" content="Mooz Store - Melhor loja do discord">
+    <title>Mooz Store - Redirecionamento</title>
+    <style>
+        /* Reset básico */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html, body {
+            height: 100%;
+            font-family: 'Poppins', Arial, sans-serif;
+            overflow: hidden; /* Impede a rolagem desnecessária */
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: url('images/4f827f5fe823ed6a3cb7ad47f3bde80b.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #ffffff;
+            text-align: center;
+            padding: 1.5rem;
+            position: relative;
+            transition: background 0.5s ease-in-out;
+        }
+
+        /* Overlay escuro para destacar o conteúdo */
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6); /* Overlay mais suave */
+            z-index: 0;
+        }
+
+        /* Animação de borda com brilho */
+        @keyframes borderGlow {
+            0%, 100% {
+                box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+            }
+            50% {
+                box-shadow: 0 0 35px rgba(255, 255, 255, 0.6); /* Brilho intenso no meio */
+            }
+        }
+
+        .container {
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 16px;
+            padding: 3rem 2rem;
+            background: rgba(30, 30, 30, 0.8);
+            position: relative;
+            z-index: 1;
+            max-width: 450px;
+            width: 100%;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.7);
+            animation: borderGlow 2s infinite ease-in-out;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .container:hover {
+            transform: scale(1.05); /* Aumenta o efeito ao passar o mouse */
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin-bottom: 1.5rem;
+            font-weight: bold;
+            color: #ffffff;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.6); /* Sombra para mais destaque */
+        }
+
+        p {
+            font-size: 1.1rem;
+            margin-bottom: 1.8rem;
+            color: rgba(255, 255, 255, 0.8);
+        }
+
+        .spinner {
+            width: 60px;
+            height: 60px;
+            margin: 1.5rem auto;
+            border: 5px solid rgba(255, 255, 255, 0.3);
+            border-top-color: #ffffff;
+            border-radius: 50%;
+            animation: spin 1.5s linear infinite;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        .progress-bar {
+            width: 100%;
+            height: 8px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 4px;
+            overflow: hidden;
+            margin: 1.5rem 0;
+        }
+
+        .progress-bar-inner {
+            height: 100%;
+            background: #ffffff;
+            width: 0;
+            animation: progress 10s linear forwards;
+        }
+
+        @keyframes progress {
+            to {
+                width: 100%;
+            }
+        }
+
+        .button {
+            background: #ffffff;
+            color: #121212;
+            padding: 0.8rem 1.2rem;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 1rem;
+            font-weight: 600;
+            transition: background 0.3s ease, transform 0.2s ease-in-out;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3); /* Sombra suave para o botão */
+        }
+
+        .button:hover {
+            background: #f0f0f0;
+            transform: translateY(-3px);
+            box-shadow: 0 0 25px rgba(255, 255, 255, 0.4);
+        }
+
+        .button:focus {
+            outline: none;
+            box-shadow: 0 0 15px #ffffff;
+        }
+
+        .footer {
+            margin-top: 2rem;
+            font-size: 0.85rem;
+            color: rgba(255, 255, 255, 0.6);
+            text-align: center;
+            width: 100%;
+            position: relative;
+            z-index: 1;
+        }
+
+        .footer a {
+            color: #ffffff;
+            text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+
+        .footer a:hover {
+            color: #cccccc;
+        }
+
+        /* Responsividade */
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 1.6rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            .spinner {
+                width: 50px;
+                height: 50px;
+                border-width: 4px;
+            }
+
+            .button {
+                font-size: 0.9rem;
+                padding: 0.6rem 1rem;
+            }
+
+            .container {
+                padding: 2rem 1.5rem;
+            }
+
+            .footer {
+                font-size: 0.75rem;
+            }
+        }
+    </style>
 </head>
-
 <body>
-    <div id="particles-js"></div>
-    <div class="overlay"><button id="start-button" class="start-btn">𝙲𝚕𝚒𝚌𝚔</button></div>
-    <div class="container" style="display: none;">
-        <h1 class="title">MOOZ STORE</h1>
-        <p class="subtitle">Venha para a melhor loja do Brasil!</p>
-        <div class="loader"></div>
-        <p class="message"></p><a href="https://discord.gg/SfWDx7NApV" target="_blank"
-            class="discord-btn">Entre no Discord</a>
+    <div class="container">
+        <div class="spinner" aria-hidden="true"></div>
+        <h1>Redirecionando para Mooz Store...</h1>
+        <p>Aguarde <span id="countdown">10</span> segundos ou clique no botão abaixo.</p>
+        <div class="progress-bar" aria-hidden="true">
+            <div class="progress-bar-inner"></div>
+        </div>
+        <button class="button" onclick="redirectNow()">Redirecionar agora</button>
     </div>
-    <script src="js/particles.js"></script>
-    <script src="scripts.js"></script><audio id="background-music" loop="">
-        <source src="media/musica.mp3" type="audio/mp3">Seu navegador não suporta o elemento de áudio.
-    </audio>
-    <script>const startButton = document.getElementById("start-button"); const container = document.querySelector('.container'); const overlay = document.querySelector('.overlay'); const music = document.getElementById("background-music"); startButton.addEventListener("click", () => { overlay.style.display = "none"; container.style.display = "block"; music.play(); });</script>
 
-    <link rel="icon" href="images/logoo.png">
-    <link rel="shortcut icon" href="images/logoo.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Mooz Store">
-    <meta name="twitter:description" content="ProxyMooz">
-    <meta name="twitter:image"
-        content="https://media.discordapp.net/attachments/1319892233406644288/1320096836098330705/1320093770628333639.png?ex=67685b7b&amp;is=676709fb&amp;hm=1d6e8a1842a9d184e4b1753c3f5126b064e8c90a695f46dc35eadf41affb3738&amp;=&amp;format=webp&amp;quality=lossless">
-</body>
+    <footer class="footer">
+        <p>© 2025 Mooz Store Todos os direitos reservados.</p>
+    </footer>
 
-</html>
+    <script>
+        const countdownElement = document.getElementById('countdown');
+        const redirectUrl = "https://discord.gg/SfWDx7NApV";
+        let countdown = 10;
+
+        const interval = setInterval(() => {
+            countdown--;
+            countdownElement.textContent = countdown;
+
+            if (countdown <= 0) {
+                clearInterval(interval);
+                redirectNow();
+            }
+        }, 1000);
+
+        function redirectNow() {
+            window.location.href = redirectUrl;
+        }
+    </script>
+
+</body></html>
